Fix running locally