@@ -62,6 +62,10 @@ tasks.withType(Test) {
     jvmArgs += "--enable-preview"
 }
 
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 jar {
     manifest {
         attributes 'Main-Class': 'com/tibiawiki/TibiaWikiApiApplication'
@@ -74,8 +78,8 @@ test {
 
 sourceSets {
     intTest {
-        compileClasspath += sourceSets.it.output
-        runtimeClasspath += sourceSets.it.output
+        compileClasspath += sourceSets.main.output
+        runtimeClasspath += sourceSets.main.output
     }
 }
 
